tests/errors/scope_local_after_block.ptt
// Codex audit P0-3: locals declared inside `{ ... }` must not
// be visible after the block ends. Pre-fix this passed type-check
// and read freed heap memory.

use std/string

Point is { x int, y int }

spark {
  {
    p is Point()
    p.x be 99
  }
  yell(p.x)               // <-- error: p is out of scope
}
